--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,22 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  dio: ^5.6.0
+  get_it: ^8.0.0
+  json_annotation: ^4.9.0
+  equatable: ^2.0.5
+  dartz: ^0.10.1
+  logger: ^2.0.2
+  pretty_dio_logger: ^1.4.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.7
+  freezed: ^2.5.0
+  json_serializable: ^6.8.0
   flutter_lints: ^5.0.0
 
 flutter:
